# DistributedMonitor

./: CMakeLists.txt  README.md  config.txt  zhelpers.hpp
client/: Table.h  client.cpp  client.h  configuration.h  consumer.h  lockwrapper.h  monitor.cpp  monitor.h  philosopher.cpp  philosopher.h  producer.h  spinbuf.h
proxy/: CMakeLists.txt  main.cpp
